--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1>My first Mean-Stack</h1>
-<app-post-create></app-post-create>
+<app-header></app-header>
+<main>
+  <app-post-create></app-post-create>
+</main>
