--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -2,9 +2,7 @@
   <mat-form-field>
     <textarea matInput rows="6" [(ngModel)]="enteredValue"></textarea>
   </mat-form-field>
-  <button mat-raised-button color="primary" (click)="onAddPost()">
+  <button mat-raised-button color="accent" (click)="onAddPost()">
     Save Post
   </button>
 </mat-card>
-
-<p>{{ newPost }}</p>
