--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -1,5 +1,5 @@
-<mat-accordion>
-  <mat-expansion-panel hideToggle>
+<mat-accordion multi="true" *ngIf="posts.length > 0">
+  <!-- <mat-expansion-panel hideToggle>
     <mat-expansion-panel-header>
       <mat-panel-title> This is the expansion title </mat-panel-title>
       <mat-panel-description>
@@ -7,17 +7,20 @@
       </mat-panel-description>
     </mat-expansion-panel-header>
     <p>This is the primary content of the panel.</p>
-  </mat-expansion-panel>
+  </mat-expansion-panel> -->
   <mat-expansion-panel
     (opened)="panelOpenState = true"
     (closed)="panelOpenState = false"
+    *ngFor="let post of posts"
   >
     <mat-expansion-panel-header>
-      <mat-panel-title> Self aware panel </mat-panel-title>
+      <mat-panel-title> {{ post.title }} </mat-panel-title>
       <mat-panel-description>
         Currently I am {{ panelOpenState ? "open" : "closed" }}
       </mat-panel-description>
     </mat-expansion-panel-header>
-    <p>I'm visible because I am open</p>
+    <p>{{ post.content }}</p>
   </mat-expansion-panel>
 </mat-accordion>
+
+<p class="mat-body-1 info-text" *ngIf="posts.length <= 0">No posts added yet</p>
