--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -1,5 +1,5 @@
-<mat-accordion multi="true" *ngIf="posts.length > 0">
-  <!-- <mat-expansion-panel hideToggle>
+<!-- <mat-accordion multi="true" *ngIf="posts.length > 0"> -->
+<!-- <mat-expansion-panel hideToggle>
     <mat-expansion-panel-header>
       <mat-panel-title> This is the expansion title </mat-panel-title>
       <mat-panel-description>
@@ -8,7 +8,7 @@
     </mat-expansion-panel-header>
     <p>This is the primary content of the panel.</p>
   </mat-expansion-panel> -->
-  <mat-expansion-panel
+<!-- <mat-expansion-panel
     (opened)="panelOpenState = true"
     (closed)="panelOpenState = false"
     *ngFor="let post of posts"
@@ -23,20 +23,20 @@
   </mat-expansion-panel>
 </mat-accordion>
 
-<p class="mat-body-1 info-text" *ngIf="posts.length <= 0">No posts added yet</p>
+<p class="mat-body-1 info-text" *ngIf="posts.length <= 0">No posts added yet</p> -->
 
-<!-- <mat-accordion multi="true" *ngIf="posts.length > 0">
+<mat-accordion multi="true" *ngIf="posts.length > 0">
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
       {{ post.title }}
     </mat-expansion-panel-header>
     <p>{{ post.content }}</p>
     <mat-action-row>
-      <button mat-button color="primary">EDIT</button>
+      <button mat-button color="accent">EDIT</button>
       <button mat-button color="warn">DELETE</button>
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
 <p class="info-text mat-body-1" *ngIf="posts.length <= 0">
   No posts added yet!
-</p> -->
+</p>
